HUE-7680 [frontend] Fix overflow for the sample tables in the popovers

--- a/desktop/core/src/desktop/static/desktop/less/hue-assist.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-assist.less
@@ -809,7 +809,7 @@
 
 .context-popover-sample {
   text-align: left;
-  padding: 3px;
+  padding: 0;
   overflow: hidden;
   height: 100%;
 
@@ -840,6 +840,10 @@
       height: 23px;
       border-bottom: 1px solid @cui-gray-200 !important;
     }
+  }
+
+  .dataTables_wrapper {
+    overflow: auto;
   }
 }
 
